# gate.io-bot

./: .env.example  .gitignore  0.4  AGENTS.md  README.md  docker-compose.yml  paper-worker.toml  railway.toml  scheduler.toml  scripts_cleanup.py  start.bat
backend/: .dockerignore  Dockerfile  Dockerfile.worker  alembic.ini  nixpacks.toml  pyproject.toml  railway.scheduler.toml  railway.toml  railway.worker.toml  schema.sql
backend/app/: main.py  scripts_create_admin.py
backend/app/account/: __init__.py  engine.py  models.py
backend/app/api/: deps.py
backend/app/auto_learning/: __init__.py  engine.py  feature_discovery.py  hypothesis_generator.py  knowledge_base.py  meta_learning.py  models.py  pattern_miner.py  ranking_engine.py  safety.py  strategy_evolution.py  validation_pipeline.py
backend/app/backtest/: broker.py  engine.py  metrics.py  models.py  multiple_testing.py  optimizer.py  portfolio.py  reports.py  strategy_runner.py
backend/app/core/: audit.py  config.py  logging.py  metrics.py  rate_limit.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/execution_quality/: benchmark.py  engine.py  fill_analyzer.py  latency_tracker.py  metrics.py  models.py  optimizer.py  order_book_simulator.py  slippage_analyzer.py  splitter.py  tca.py
backend/app/market_data/: __init__.py  ingestion.py  price_cache.py  websocket.py
backend/app/market_data_quality/: __init__.py  anomaly_detector.py  backtest_support.py  cross_exchange_validator.py  data_health_score.py  engine.py  gap_detector.py  models.py  normalization.py  spike_detector.py  validator.py  volume_analyzer.py
backend/app/market_regime/: __init__.py  classifier.py  clustering.py  detector.py  engine.py  features.py  models.py  signals.py  trend.py  volatility.py
backend/app/models/: __init__.py  auth.py  data_quality.py  entities.py  enums.py  execution.py  learning.py  market.py  paper.py  portfolio.py  research.py  strategy.py  trading.py
backend/app/paper_trading/: broker.py  engine.py  execution_simulator.py  market_data_stream.py  metrics.py  mirror.py  models.py  order_manager.py  portfolio.py  risk_simulator.py  strategy_adapter.py
backend/app/portfolio/: allocator.py  correlation.py  engine.py  exposure.py  models.py  optimizer.py  performance.py  rebalancer.py  risk_model.py
backend/app/reconciliation/: __init__.py  engine.py
backend/app/repositories/: base.py  trading.py
backend/app/schemas/: _common.py  account.py  auth.py  auto_learning.py  backtest.py  circuit_breaker.py  dashboard.py  execution_quality.py  health.py  market_data.py  market_data_quality.py  paper.py  portfolio.py  reconciliation.py  regime.py  strategy_research.py  walkforward.py
backend/app/services/: trading_engine.py
backend/app/strategy_health/: alert_manager.py  anomaly_detector.py  baseline.py  drift_detector.py  engine.py  metrics_tracker.py  models.py  performance_analyzer.py  risk_adjuster.py  statistical_tests.py
backend/app/strategy_research/: __init__.py  ab_testing.py  backtest_runner.py  clustering.py  engine.py  evaluator.py  feature_store.py  generator.py  hypothesis_builder.py  models.py  repository.py
backend/app/tests/: conftest.py  test_account.py  test_api_common.py  test_audit.py  (+52 more)
backend/migrations/: env.py
(+145 files in other folders)
