[project]
name = "gateio-capital-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4",
  "cryptography>=42.0.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "numpy>=1.26.4",
  "optuna>=3.6.1",
  "pandas>=2.2.2",
  "bcrypt>=4.0.1",
  "plotly>=5.22.0",
  "joblib>=1.4.2",
  "scikit-learn>=1.5.0",
  "pydantic[email]>=2.7.0",
  "psycopg[binary]>=3.1.18",
  "pydantic-settings>=2.2.1",
  "pyjwt>=2.8.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "redis>=5.0.3",
  "sqlalchemy>=2.0.29",
  "uvicorn[standard]>=0.29.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.4.0",
  "alembic>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
