[project]
name = "gateio-capital-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.11.2",
  "cryptography>=48.0.1",
  "fastapi>=0.136.3",
  "httpx>=0.28.1",
  "numpy>=2.4.6",
  "optuna>=4.9.0",
  "pandas>=3.0.3",
  "bcrypt>=5.0.0",
  "plotly>=6.8.0",
  "joblib>=1.5.3",
  "scikit-learn>=1.9.0",
  "prometheus-client>=0.25.0",
  "pydantic[email]>=2.13.4",
  "psycopg[binary]>=3.3.4",
  "pydantic-settings>=2.14.1",
  "pyjwt>=2.13.0",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.32",
  "redis>=8.0.0",
  "sqlalchemy>=2.0.50",
  "uvicorn[standard]>=0.49.0",
  "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.15.17",
  "alembic>=1.18.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py312"
